--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
-
+        <div class="container"></div>
 
         <script data-main="js/index.js" src="js/lib/require.js"></script>
     </body>
