--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,9 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title></title>
+        <link rel="stylesheet" href="css/lib/bootstrap.css"/>
         <link rel="stylesheet" href="css/main.css" />
+
     </head>
     <body>
         <div class="container"></div>
